--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,14 @@ _testmain.go
 *.exe
 *.test
 *.prof
+
+# ignore the binary
+webauth/webauth
+
+# vim stuff
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
