add Root_dir config variable

--- a/config/webauth_config.json
+++ b/config/webauth_config.json
@@ -1,6 +1,7 @@
 {
-    "Certificate": "../tls/dummy_cert.pem",
-    "Key": "../tls/dummy_key.pem",
+    "Root_dir": "/path/to/server/root",
+    "Certificate": "tls/dummy_cert.pem",
+    "Key": "tls/dummy_key.pem",
     "Http_port": "8080",
     "Https_port": "8443"
 }
