--- a/config.toml
+++ b/config.toml
@@ -3,4 +3,4 @@ Cert = "tls/dummy_cert.pem"
 Key = "tls/dummy_key.pem"
 HTTPPort = 8080
 HTTPSPort = 8443
-LoginTemplate = "/home/nskinkel/src/go/src/github.com/Senior-Design-May1601/webauth/templates/login.html"
+LoginTemplate = "/path/to/templates/login.html"
